# freeswitch-esl-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: command-builders.md  design-rationale.md  esl-feature-parity.md  freeswitch-directory-users.md  outbound-esl-quirks.md
examples/: channel_tracker.rs  event_filter.rs  event_listener.rs  inbound_client.rs  outbound_server.rs  outbound_test.rs
fs_cli-rs/: Cargo.toml  README.md
fs_cli-rs/src/: commands.rs  completion.rs  esl_debug.rs  log_display.rs  main.rs
hooks/: check-event-types.sh  pre-commit
src/: buffer.rs  channel.rs  command.rs  connection.rs  constants.rs  error.rs  event.rs  lib.rs  protocol.rs
src/app/: dptools.rs  mod.rs
src/commands/: channel.rs  conference.rs  mod.rs  originate.rs
src/variables/: esl_array.rs  mod.rs  sip_multipart.rs
tests/: connection_tests.rs  integration_tests.rs  live_freeswitch.rs  mock_server.rs
