[package]
name = "freeswitch-esl-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "FreeSWITCH Event Socket Library (ESL) client for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/freeswitch-esl-rs"
keywords = ["freeswitch", "esl", "voip", "telephony"]
categories = ["network-programming", "api-bindings"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "inbound_client"
path = "examples/inbound_client.rs"

[[example]]
name = "outbound_server" 
path = "examples/outbound_server.rs"

[[example]]
name = "event_listener"
path = "examples/event_listener.rs"
