[package]
name = "freeswitch-esl-tokio"
version = "1.1.0"
edition = "2021"
authors = ["Jérôme Poulin <jeromepoulin@gmail.com>"]
description = "FreeSWITCH Event Socket Library (ESL) client for Rust"
license = "MPL-2.0"
repository = "https://github.com/ticpu/freeswitch-esl-tokio"
keywords = ["freeswitch", "esl", "voip", "telephony"]
categories = ["network-programming", "api-bindings"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
percent-encoding = "2"
tracing = "0.1"
futures = "0.3"
indexmap = "2"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "inbound_client"
path = "examples/inbound_client.rs"

[[example]]
name = "outbound_server"
path = "examples/outbound_server.rs"

[[example]]
name = "event_listener"
path = "examples/event_listener.rs"

[[example]]
name = "event_filter"
path = "examples/event_filter.rs"
